<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="?attr/actionBarSize" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/player_input_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="@id/score_input_layout"
                app:layout_constraintBottom_toBottomOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextPersonName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/fira_sans"
                    android:ems="10"
                    android:inputType="textCapSentences"
                    android:maxLength="30"
                    android:hint="@string/player_name_label" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/player_input_error"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:textColor="@color/design_default_color_error"
                android:fontFamily="@font/fira_sans"
                android:layout_marginBottom="5sp"
                android:text="" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/score_input_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="@id/player_input_layout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editScoreValue"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/fira_sans"
                    android:ems="10"
                    android:inputType="number"
                    android:enabled="false"
                    android:hint="@string/score_name_label" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/score_input_error"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:fontFamily="@font/fira_sans"
                android:textColor="@color/design_default_color_error"
                android:layout_marginBottom="5sp"
                android:text="" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/datetime_input_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="@id/player_input_layout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editDateTimeValue"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/fira_sans"
                    android:ems="10"
                    android:inputType="datetime"
                    android:hint="@string/datetime_label" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/datetime_input_error"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:fontFamily="@font/fira_sans"
                android:textColor="@color/design_default_color_error"
                android:layout_marginBottom="5sp"
                android:text="" />


        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>